AM_CXXFLAGS=-Wall -I../.. -g -std=c++11

bin_PROGRAMS=bin/aspclient bin/aspserver

bin_aspclient_SOURCES=aspclient/src/keyboard.cpp aspclient/src/main.cpp aspclient/src/network.cpp aspclient/src/world.cpp

bin_aspserver_SOURCES=aspserver/src/client.cpp aspserver/src/main.cpp aspserver/src/network.cpp aspserver/src/hashmap.cpp aspserver/src/world.cpp
